# django-snacks

./: README.me  db.sqlite3  pyproject.toml
snacks/: tests.py  urls.py  views.py
snacks_project/: settings.py
