[tool.poetry]
name = "snacks_project"
version = "0.1.0"
description = ""
authors = ["mahmoud-salameh <mahmoud4561@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
